change style of squares so that if a square is being hovered over by the mouse, the border of said square thickens and changes color

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,10 @@ ol, ul {
   outline: none;
 }
 
+.square:hover {
+  border: 2px solid black;
+}
+
 .kbd-navigation .square:focus {
   background: #ddd;
 }
